# maple-util-server

./: .gitignore  README.md  a.text  docker-compose.yaml  pyproject.toml  test_call.sh
api_server/: __main__.py  aiomysql_db.py  constants.py
api_server/base/: db.py
api_server/http_server/: crwaler.py  http_server.py  http_server_context.py  http_server_db_handler.py  http_server_env.py  http_server_routing_handler.py  item_info.py
front_server/: package-lock.json  package.json
front_server/src/: App.js
test/test_http_server/: crwaler_test.py
test/test_http_server/views/: 1.txt  1_result.txt  2.txt  2_result.txt  3.txt  3_result.txt
