[tool.poetry]
name = "maple-util-server"
version = "0.1.0"
description = ""
authors = ["changsu lee <leecs0503@naver.com>"]
readme = "README.md"
packages = [{include = "maple_util_server"}]

[tool.poetry.dependencies]
python = "3.8.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
