[tool.poetry]
name = "maple-util-server"
version = "0.1.0"
description = ""
authors = ["changsu lee <leecs0503@naver.com>"]
readme = "README.md"
packages = [{include = "maple_util_server"}]

[tool.poetry.dependencies]
python = "3.8.10"
aiomysql = "^0.1.1"
aiohttp = "^3.8.4"
requests = "^2.29.0"
aiohttp-middlewares = "^2.2.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
